RESOLVED FIXED187561
[32bit JSC tests] stress/cow-convert-double-to-contiguous.js and stress/cow-convert-int32-to-contiguous.js are failing
https://bugs.webkit.org/show_bug.cgi?id=187561
Summary [32bit JSC tests] stress/cow-convert-double-to-contiguous.js and stress/cow-...
Dawei Fenton (:realdawei)
Reported 2018-07-11 13:12:04 PDT
Created attachment 344780 [details] stdio JSC stress test failures have been introduced: stress/cow-convert-double-to-contiguous.js.default stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases stress/cow-convert-double-to-contiguous.js.no-llint stress/cow-convert-int32-to-contiguous.js.default stress/cow-convert-int32-to-contiguous.js.dfg-maximal-flush-validate-no-cjit stress/cow-convert-int32-to-contiguous.js.no-cjit-validate-phases stress/cow-convert-int32-to-contiguous.js.no-llint
Attachments
stdio (1.84 MB, text/html)
2018-07-11 13:12 PDT, Dawei Fenton (:realdawei)
no flags
Patch (3.23 KB, patch)
2018-07-12 00:56 PDT, Yusuke Suzuki
no flags
Patch (3.96 KB, patch)
2018-07-12 00:58 PDT, Yusuke Suzuki
no flags
Archive of layout-test-results from ews206 for win-future (12.78 MB, application/zip)
2018-07-12 10:25 PDT, EWS Watchlist
no flags
Dawei Fenton (:realdawei)
Comment 1 2018-07-11 13:27:39 PDT
These tests were added on 5/22 https://trac.webkit.org/changeset/232070/webkit However began failing somewhere in the range r232904 - 232909 Excerpt from stdio: https://build.webkit.org/builders/Apple%20High%20Sierra%2032-bit%20JSC%20%28BuildAndTest%29/builds/2269/steps/webkit-32bit-jsc-test/logs/stdio stress/cow-convert-double-to-contiguous.js.default: Exception: Error: test should be === to 2.0585345 stress/cow-convert-double-to-contiguous.js.default: shouldBe@cow-convert-double-to-contiguous.js:8:24 stress/cow-convert-double-to-contiguous.js.default: test@cow-convert-double-to-contiguous.js:17:13 stress/cow-convert-double-to-contiguous.js.default: global code@cow-convert-double-to-contiguous.js:28:9 stress/cow-convert-double-to-contiguous.js.default: ERROR: Unexpected exit code: 3 FAIL: stress/cow-convert-double-to-contiguous.js.default Running stress/cow-convert-double-to-contiguous.js.no-llint stress/cow-convert-double-to-contiguous.js.no-llint: Exception: Error: test should be === to 2.0585345 stress/cow-convert-double-to-contiguous.js.no-llint: shouldBe@cow-convert-double-to-contiguous.js:8:24 stress/cow-convert-double-to-contiguous.js.no-llint: test@cow-convert-double-to-contiguous.js:17:13 stress/cow-convert-double-to-contiguous.js.no-llint: global code@cow-convert-double-to-contiguous.js:28:9 stress/cow-convert-double-to-contiguous.js.no-llint: ERROR: Unexpected exit code: 3 FAIL: stress/cow-convert-double-to-contiguous.js.no-llint Running stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases Running stress/cow-convert-double-to-contiguous.js.dfg-eager stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases: Exception: Error: test should be === to 2.0585345 stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases: shouldBe@cow-convert-double-to-contiguous.js:8:24 stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases: test@cow-convert-double-to-contiguous.js:17:13 stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases: global code@cow-convert-double-to-contiguous.js:28:9 stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases: ERROR: Unexpected exit code: 3 FAIL: stress/cow-convert-double-to-contiguous.js.no-cjit-validate-phases Running stress/cow-convert-double-to-contiguous.js.dfg-eager-no-cjit-validate Running stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit Running stress/cow-convert-int32-to-array-storage.js.default stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit: Exception: Error: test should be === to 2.0585345 stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit: shouldBe@cow-convert-double-to-contiguous.js:8:24 stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit: test@cow-convert-double-to-contiguous.js:17:13 stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit: global code@cow-convert-double-to-contiguous.js:28:9 stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit: ERROR: Unexpected exit code: 3 FAIL: stress/cow-convert-double-to-contiguous.js.dfg-maximal-flush-validate-no-cjit
Ryan Haddad
Comment 2 2018-07-11 13:35:25 PDT
*** Bug 187560 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 3 2018-07-11 14:09:19 PDT
(In reply to David Fenton (:realdawei) from comment #1) > These tests were added on 5/22 > https://trac.webkit.org/changeset/232070/webkit > > However began failing somewhere in the range r232904 - 232909 https://trac.webkit.org/changeset/232904/webkit seems like a suspect
Yusuke Suzuki
Comment 4 2018-07-11 23:45:38 PDT
I guess this is a CoW array bug: r232904 fixes another bug in CoW array and it reveals the existing issue.
Yusuke Suzuki
Comment 5 2018-07-12 00:56:27 PDT
Yusuke Suzuki
Comment 6 2018-07-12 00:58:18 PDT
Yusuke Suzuki
Comment 7 2018-07-12 01:14:05 PDT
we need to reduce 32bit code......
EWS Watchlist
Comment 8 2018-07-12 10:25:35 PDT
Comment on attachment 344834 [details] Patch Attachment 344834 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8516155 New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html
EWS Watchlist
Comment 9 2018-07-12 10:25:46 PDT
Created attachment 344856 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Yusuke Suzuki
Comment 10 2018-07-13 10:53:16 PDT
Comment on attachment 344834 [details] Patch Thank you!
WebKit Commit Bot
Comment 11 2018-07-13 11:20:27 PDT
Comment on attachment 344834 [details] Patch Clearing flags on attachment: 344834 Committed r233806: <https://trac.webkit.org/changeset/233806>
WebKit Commit Bot
Comment 12 2018-07-13 11:20:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2018-07-13 11:23:21 PDT
Note You need to log in before you can comment on or make changes to this bug.